--- a/frontend/startseite.html
+++ b/frontend/startseite.html
@@ -38,10 +38,9 @@
                 <button id="anmelden">
                     Anmelden
                 </button>
-
-                <button type="button" value="Registrieren">
-                    Registrieren
-                </button>
+                <form action="registrierung.html" class="formbutton">
+                    <input type="submit" value="Registrieren">
+                </form>
             </div>
         </div>
     </header>
