--- a/frontend/registrierung.html
+++ b/frontend/registrierung.html
@@ -208,7 +208,7 @@
             <tr>
               <td align="right">Strasse & Nr.:</td>
               <td>
-                <input maxlength="50" id="Strasse" pattern="[A-Za-z0-9]+" size="45" type="text" placeholder="MUSTERSTR. 1"required/>
+                <input maxlength="50" id="Strasse"  size="45" type="text" placeholder="MUSTERSTR. 1"required/>
               </td>
             </tr>
             <tr>
